--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -12,6 +12,11 @@ output:
 ```{r include=FALSE,echo=FALSE}
 require(tigerstats)
 require(tidyverse)
+library(leaps)
+mydata <- read.csv(file = "Fish.csv")
+
+perch <- filter(mydata, Species == "Perch")
+perch <- select(perch, -Species)
 ```
 
 # Introduction
@@ -21,7 +26,28 @@ require(tidyverse)
 ## Build the best regression model you can that predicts the weight of perch
 ## Using only two predictor variables  
 
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = perch,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
 
+```{r}
+perchMODL <- lm(Weight~ Height+Width,data=perch)
+summary.lm(perchMODL)
+```
+  
+Looking at this linear model we can see that the best regression model to predict the weight of perch is height and width. These variables have an adjusted R-squared value of 0.94 which is extremely accurate comparatively to other models with varying variables.
+  
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
