--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -49,7 +49,30 @@ summary.lm(perchMODL)
 Looking at this linear model we can see that the best regression model to predict the weight of perch is height and width. These variables have an adjusted R-squared value of 0.94 which is extremely accurate comparatively to other models with varying variables.
   
 # Roach
+```{r}
+Roach <- filter(mydata, Species == "Roach")
+Roach <- select(Roach, -Species)
+```
 
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Roach,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
+
+```{r}
+RoachMODL <- lm(Weight~ Length3+Width,data=Roach)
+summary.lm(RoachMODL)
+```
 
 # Pike
 ```{r}
