--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -26,19 +26,7 @@ perch <- select(perch, -Species)
 ## Build the best regression model you can that predicts the weight of perch
 ## Using only two predictor variables  
 # Perch
-# Different Plots for Correlation
-```{r}
-basicNN <- ggplot(perch,aes(y=Weight,x=Height))
-basicNN + geom_point() + geom_smooth(method=lm) + ggtitle("Perch")
-```
 
-```{r}
-basicNN <- ggplot(perch,aes(y=Weight,x=Width))
-basicNN + geom_point() + geom_smooth(method=lm) + ggtitle("Perch")
-```
-  
-The scatter plots above illustrate a basic positive linear correlation between the width and height values to weight. These correlations are actually extremely tight knit comparatively to a usual spread. This is partially just the fact that the values are so much larger in the y direction though. Regardless, the graphs illustrate a relationship between these variables that will be further investigated.
-  
 ```{r}
 library(leaps)
 regsubsets.out <-
@@ -118,7 +106,22 @@ summary.lm(PikeMODL)
   
 This pike test determined that the most valuable model would utilize length and length3 to determine the weight of the pike. This is dissimilar to the other models which used length and width. However, despite having the extremely accurate adjusted R-squared value of 0.9649, this model is not as accurate as a regression model with all variables included.
   
+# Different Plots for Correlation
+```{r}
+basicNN <- ggplot(perch,aes(y=Weight,x=Height))
+basicNN + geom_point() + geom_smooth(method=lm) + ggtitle("Perch")
+```
 
+```{r}
+basicNN <- ggplot(perch,aes(y=Weight,x=Width))
+basicNN + geom_point() + geom_smooth(method=lm) + ggtitle("Perch")
+```
+  
+The scatter plots above illustrate a basic positive linear correlation between the width and height values to weight. These correlations are actually extremely tight knit comparatively to a usual spread. This is partially just the fact that the values are so much larger in the y direction though. Regardless, the graphs illustrate a close relationship between these variables that fits our other regression models. It justifies the measure of accuracy of our data.
+  
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+  
+At the beginning of the report, we inserted a code to read our available file to create usable data. Then we used a filter function to separate subgroups of the data according to what we needed to use (Perch, Roach, Pike). We did this for each species we needed to report on, and then went on to use a select command to take out the factor variable species because it would not have fit with our numerical variables. Originally looking at the manual method of determining the most improved regression model, we then decided to automate our regression models which calculated the weight of perch using the best two variables. Doing this for perch, roach, and pike, it was found that perch and roach two regression models were best using length and width, while the pike model calculated length and length3 to be the most accurate variables. After having a visual representation of the relationship in the scatter plots above, it is evident that the correlation could be a causal relationship. An increase in length would increase the overall mass of the fish, just as an increase in width would increase the mass of the fish. 
+  
